# CuckySonic

./: -Wall  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  help.txt
SDL2/: Android.mk  CMakeLists.txt  Makefile.in  Makefile.minimal  Makefile.os2  Makefile.pandora  Makefile.psp  Makefile.wiz  SDL2.spec  SDL2.spec.in  SDL2Config.cmake  VisualC.html  autogen.sh  cmake_uninstall.cmake.in  configure  configure.ac  sdl2-config.cmake.in
SDL2/VisualC/: clean.sh
SDL2/VisualC/SDL/: SDL.vcxproj  SDL.vcxproj.filters
SDL2/VisualC/SDLmain/: SDLmain.vcxproj
SDL2/Xcode-iOS/Demos/: Info.plist  README
SDL2/Xcode-iOS/Test/: Info.plist  README
SDL2/Xcode/SDL/: Info-Framework.plist
SDL2/Xcode/SDLTest/: TestDropFile-Info.plist
SDL2/acinclude/: libtool.m4  pkg_config.m4
SDL2/android-project/app/: build.gradle
SDL2/build-scripts/: androidbuild.sh  androidbuildlibs.sh  checker-buildbot.sh  config.guess  config.sub  config.sub.patch  emscripten-buildbot.sh  g++-fat.sh  gcc-fat.sh  iosbuild.sh  ltmain.sh  nacl-buildbot.sh  naclbuild.sh  os2-buildbot.sh  raspberrypi-buildbot.sh  showrev.sh  update-copyright.sh
SDL2/cmake/: macros.cmake  sdlchecks.cmake
SDL2/debian/: changelog  control  copyright  libsdl2-dev.install  rules
SDL2/include/: SDL_config.h  SDL_config.h.cmake  SDL_config.h.in  begin_code.h
SDL2/src/: SDL.c  SDL_assert.c  SDL_assert_c.h  SDL_dataqueue.c  SDL_dataqueue.h  SDL_error.c  SDL_error_c.h  SDL_hints.c  SDL_internal.h  SDL_log.c
SDL2/src/atomic/: SDL_atomic.c  SDL_spinlock.c
SDL2/src/audio/: SDL_audio.c  SDL_audio_c.h  SDL_audiocvt.c  SDL_audiodev.c  SDL_audiodev_c.h  SDL_audiotypecvt.c  SDL_mixer.c  SDL_sysaudio.h  SDL_wave.c  SDL_wave.h
SDL2/src/cpuinfo/: SDL_cpuinfo.c
SDL2/src/dynapi/: SDL_dynapi.c  SDL_dynapi.h  SDL_dynapi_overrides.h  SDL_dynapi_procs.h  gendynapi.pl
SDL2/src/events/: SDL_clipboardevents.c  SDL_clipboardevents_c.h  SDL_displayevents.c  SDL_displayevents_c.h  SDL_dropevents.c  SDL_dropevents_c.h  SDL_events.c  SDL_events_c.h  SDL_gesture.c  SDL_gesture_c.h  SDL_keyboard.c  SDL_keyboard_c.h  SDL_mouse.c  SDL_mouse_c.h  SDL_quit.c  SDL_sysevents.h  SDL_touch.c  SDL_touch_c.h  SDL_windowevents.c  SDL_windowevents_c.h  blank_cursor.h  default_cursor.h  scancodes_darwin.h  scancodes_linux.h  scancodes_windows.h  scancodes_xfree86.h
SDL2/src/file/: SDL_rwops.c
SDL2/src/haptic/: SDL_haptic.c  SDL_haptic_c.h  SDL_syshaptic.h
SDL2/src/hidapi/: Makefile.am  bootstrap  configure.ac
SDL2/src/joystick/: SDL_gamecontroller.c  SDL_gamecontrollerdb.h  SDL_joystick.c  SDL_joystick_c.h  SDL_sysjoystick.h  controller_type.h  sort_controllers.py
SDL2/src/libm/: e_atan2.c  e_exp.c  e_fmod.c  e_log.c  e_log10.c  e_pow.c  e_rem_pio2.c  e_sqrt.c  k_cos.c  k_rem_pio2.c  k_sin.c  k_tan.c  math_libm.h  math_private.h  s_atan.c  s_copysign.c  s_cos.c  s_fabs.c  s_floor.c  s_scalbn.c  s_sin.c  s_tan.c
SDL2/src/power/: SDL_power.c  SDL_syspower.h
SDL2/src/render/: SDL_d3dmath.c  SDL_d3dmath.h  SDL_render.c  SDL_sysrender.h  SDL_yuv_sw.c  SDL_yuv_sw_c.h
SDL2/src/sensor/: SDL_sensor.c  SDL_sensor_c.h  SDL_syssensor.h
SDL2/src/stdlib/: SDL_getenv.c  SDL_iconv.c  SDL_malloc.c  SDL_qsort.c  SDL_string.c
SDL2/src/test/: SDL_test_assert.c  SDL_test_common.c  SDL_test_compare.c  SDL_test_crc32.c  SDL_test_font.c  SDL_test_fuzzer.c  SDL_test_harness.c  SDL_test_imageBlit.c  SDL_test_imageBlitBlend.c  SDL_test_imageFace.c  SDL_test_imagePrimitives.c  SDL_test_imagePrimitivesBlend.c  SDL_test_log.c  SDL_test_md5.c  SDL_test_memory.c  SDL_test_random.c
SDL2/src/thread/: SDL_systhread.h  SDL_thread.c  SDL_thread_c.h
SDL2/src/timer/: SDL_timer.c  SDL_timer_c.h
SDL2/src/video/: SDL_RLEaccel.c  SDL_RLEaccel_c.h  SDL_blit.c  SDL_blit.h  SDL_blit_0.c  SDL_blit_1.c  SDL_blit_A.c  SDL_blit_N.c  (+26 more)
SDL2/test/: CMakeLists.txt  Makefile.in  Makefile.os2  README  checkkeys.c  configure  configure.ac  controllermap.c  loopwave.c  loopwavequeue.c  relative_mode.markdown  testatomic.c  testaudiocapture.c  testaudiohotplug.c  testaudioinfo.c  testautomation.c  testautomation_audio.c  testautomation_clipboard.c  testautomation_events.c  testautomation_hints.c  testautomation_keyboard.c  testautomation_main.c  testautomation_mouse.c  testautomation_pixels.c  testautomation_platform.c  testautomation_render.c  testautomation_rwops.c  testautomation_sdltest.c  testautomation_stdlib.c  testautomation_suites.h  testautomation_surface.c  testautomation_syswm.c  testautomation_timer.c  testautomation_video.c  testbounds.c  testcustomcursor.c  testdisplayinfo.c  testdraw2.c  testdrawchessboard.c  testdropfile.c  (+51 more)
SDL2/wayland-protocols/: org-kde-kwin-server-decoration-manager.xml  pointer-constraints-unstable-v1.xml  relative-pointer-unstable-v1.xml  wayland.xml
res/: icon.rc
src/: Audio.cpp  Audio.h  Audio_miniaudio.cpp  Background.cpp  Background.h  BackgroundScroll.cpp  BackgroundScroll.h  BitmapFont.cpp  BitmapFont.h  Camera.cpp  Camera.h  CommonMacros.h  Endianness.h  Error.cpp  Error.h  Event.cpp  Event.h  Fade.cpp  Fade.h  Filesystem.cpp  Filesystem.h  GM.h  GM_Game.cpp  GM_SpecialStage.cpp  GM_Splash.cpp  GM_Title.cpp  Game.cpp  Game.h  GameConstants.h  Hud.cpp  Hud.h  Input.cpp  Input.h  Level.cpp  Level.h  LevelCollision.cpp  LevelCollision.h  LevelSpecific.h  LinkedList.cpp  LinkedList.h  (+21 more)
src/Backend/: Core.h  Event.h  Filesystem.h  Input.h  Render.h
src/Backend_SDL2/: Audio.cpp  Error.cpp  Event.cpp  Filesystem.cpp  Input.cpp  Render.cpp  Render_Blit.cpp
src/LevelSpecific/: EHZ.cpp  GHZ.cpp
src/ORIGBackend_SDL2/: Audio.cpp  Error.cpp  Event.cpp  Filesystem.cpp  Input.cpp  Render.cpp
src/Objects/: AttractRing.cpp  BouncingRing.cpp  Bridge.cpp  BuzzBomber.cpp  Chopper.cpp  Crabmeat.cpp  Explosion.cpp  GHZEdgeWall.cpp  GHZLedge.cpp  GHZPlatform.cpp  GHZPurpleRock.cpp  GHZSmashableWall.cpp  GHZSpikeLog.cpp  GHZSpikes.cpp  GHZSwingingPlatform.cpp  GHZWaterfallSound.cpp  Goalpost.cpp  Minecart.cpp  Monitor.cpp  Motobug.cpp  Newtron.cpp  PathSwitcher.cpp  PurpleRock.cpp  Ring.cpp  Sonic1Scenery.cpp  Spiral.cpp  Spring.cpp  SwingingPlatform.cpp
(+627 files in other folders)
